--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1127,6 +1127,30 @@ video {
 .left-\[-28px\] {
   left: -28px;
 }
+.left-\[300px\] {
+  left: 300px;
+}
+.left-\[-300px\] {
+  left: -300px;
+}
+.top-\[100px\] {
+  top: 100px;
+}
+.left-\[200px\] {
+  left: 200px;
+}
+.top-\[-200px\] {
+  top: -200px;
+}
+.left-\[-120px\] {
+  left: -120px;
+}
+.left-\[-170px\] {
+  left: -170px;
+}
+.top-\[-170px\] {
+  top: -170px;
+}
 .z-10 {
   z-index: 10;
 }
@@ -1320,6 +1344,10 @@ video {
 .mx-\[10px\] {
   margin-left: 10px;
   margin-right: 10px;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .mb-16 {
   margin-bottom: 4rem;
@@ -1957,6 +1985,12 @@ video {
 .max-w-\[32px\] {
   max-width: 32px;
 }
+.max-w-\[850px\] {
+  max-width: 850px;
+}
+.max-w-\[120px\] {
+  max-width: 120px;
+}
 .flex-\[0_1_50\%\] {
   flex: 0 1 50%;
 }
@@ -2184,6 +2218,9 @@ video {
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .grid-rows-\[auto_auto_1fr_1fr_1fr\] {
   grid-template-rows: auto auto 1fr 1fr 1fr;
 }
@@ -2237,6 +2274,9 @@ video {
 }
 .gap-4 {
   gap: 1rem;
+}
+.gap-5 {
+  gap: 1.25rem;
 }
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
@@ -2384,6 +2424,14 @@ video {
 .border-success-400 {
   --tw-border-opacity: 1;
   border-color: rgb(143 177 177 / var(--tw-border-opacity));
+}
+.border-grey-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(211 213 219 / var(--tw-border-opacity));
+}
+.border-grey-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(157 163 175 / var(--tw-border-opacity));
 }
 .bg-\[\#F7F6F7\] {
   --tw-bg-opacity: 1;
@@ -3825,6 +3873,10 @@ video {
   --tw-translate-y: -0.75rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.hover\:-translate-y-2:hover {
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .hover\:-translate-y-1:hover {
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -3946,6 +3998,9 @@ video {
 .hover\:text-neutral-50:hover {
   --tw-text-opacity: 1;
   color: rgb(252 250 251 / var(--tw-text-opacity));
+}
+.hover\:text-sage-500:hover {
+  color: var(--sage-500);
 }
 .hover\:text-opacity-100:hover {
   --tw-text-opacity: 1;
@@ -5327,6 +5382,9 @@ video {
   .laptop\:top-\[40px\] {
     top: 40px;
   }
+  .laptop\:top-\[100px\] {
+    top: 100px;
+  }
   .laptop\:z-0 {
     z-index: 0;
   }
@@ -6051,6 +6109,9 @@ video {
   .desktop\:top-\[170px\] {
     top: 170px;
   }
+  .desktop\:top-\[100px\] {
+    top: 100px;
+  }
   .desktop\:col-span-5 {
     grid-column: span 5 / span 5;
   }
@@ -6507,6 +6568,9 @@ video {
   }
   .desktopXl\:right-\[-765px\] {
     right: -765px;
+  }
+  .desktopXl\:top-\[100px\] {
+    top: 100px;
   }
   .desktopXl\:col-span-4 {
     grid-column: span 4 / span 4;
