--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -513,6 +513,16 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(242 192 102 / var(--tw-bg-opacity));
 }
+.btn:focus {
+  color: var(--primary-plum-600);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(242 192 102 / var(--tw-ring-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 192 102 / var(--tw-bg-opacity));
+}
 .btn:active {
   --tw-scale-x: .97;
   --tw-scale-y: .97;
@@ -552,6 +562,11 @@ video {
   color: var(--sage-50);
 }
 .btn-sage-600:hover {
+  color: var(--sage-50);
+  background-color: var(--sage-600);
+  --tw-ring-color: var(--sage-600);
+}
+.btn-sage-600:focus {
   color: var(--sage-50);
   background-color: var(--sage-600);
   --tw-ring-color: var(--sage-600);
@@ -893,6 +908,12 @@ video {
   top: 0px;
   bottom: 0px;
 }
+.bottom-0 {
+  bottom: 0px;
+}
+.left-0 {
+  left: 0px;
+}
 .top-\[50\%\] {
   top: 50%;
 }
@@ -925,9 +946,6 @@ video {
 }
 .top-0 {
   top: 0px;
-}
-.left-0 {
-  left: 0px;
 }
 .top-1\/2 {
   top: 50%;
@@ -1139,8 +1157,11 @@ video {
 .left-\[-28px\] {
   left: -28px;
 }
-.bottom-0 {
-  bottom: 0px;
+.z-2 {
+  z-index: 2;
+}
+.z-1 {
+  z-index: 1;
 }
 .z-10 {
   z-index: 10;
@@ -1161,12 +1182,6 @@ video {
   z-index: 30;
 }
 .z-\[1\] {
-  z-index: 1;
-}
-.z-2 {
-  z-index: 2;
-}
-.z-1 {
   z-index: 1;
 }
 .z-3 {
@@ -1340,6 +1355,9 @@ video {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.mt-11 {
+  margin-top: 2.75rem;
+}
 .mb-16 {
   margin-bottom: 4rem;
 }
@@ -1502,9 +1520,6 @@ video {
 .mt-\[3px\] {
   margin-top: 3px;
 }
-.mt-11 {
-  margin-top: 2.75rem;
-}
 .block {
   display: block;
 }
@@ -1522,6 +1537,9 @@ video {
 }
 .hidden {
   display: none;
+}
+.h-14 {
+  height: 3.5rem;
 }
 .h-auto {
   height: auto;
@@ -1546,9 +1564,6 @@ video {
 }
 .h-\[200px\] {
   height: 200px;
-}
-.h-14 {
-  height: 3.5rem;
 }
 .h-\[20px\] {
   height: 20px;
@@ -2326,6 +2341,9 @@ video {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.rounded-2xl {
+  border-radius: 1rem;
+}
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -2340,9 +2358,6 @@ video {
 }
 .rounded-full {
   border-radius: 9999px;
-}
-.rounded-2xl {
-  border-radius: 1rem;
 }
 .rounded-\[13px\] {
   border-radius: 13px;
@@ -2627,6 +2642,9 @@ video {
 .stroke-warning-400 {
   stroke: #F3CB48;
 }
+.p-8 {
+  padding: 2rem;
+}
 .p-2 {
   padding: 0.5rem;
 }
@@ -2647,9 +2665,6 @@ video {
 }
 .p-12 {
   padding: 3rem;
-}
-.p-8 {
-  padding: 2rem;
 }
 .p-10 {
   padding: 2.5rem;
@@ -3328,10 +3343,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(60 38 38 / var(--tw-text-opacity));
 }
-.text-green-600 {
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
-}
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
 }
@@ -3376,6 +3387,11 @@ video {
 .opacity-60 {
   opacity: 0.6;
 }
+.shadow-et_1 {
+  --tw-shadow: 0px 3px 4px rgba(161, 161, 161, 0.4);;
+  --tw-shadow-colored: 0px 3px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -3394,11 +3410,6 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-et_1 {
-  --tw-shadow: 0px 3px 4px rgba(161, 161, 161, 0.4);;
-  --tw-shadow-colored: 0px 3px 4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-xs {
@@ -3619,6 +3630,15 @@ video {
 }
 .img-child-w-auto img {
   width: auto !important;
+}
+.inpot {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 0;
+  z-index: -1;
 }
 .rest-link {
   --tw-text-opacity: 1;
@@ -5817,14 +5837,14 @@ video {
   .laptop\:bg-transparent {
     background-color: transparent;
   }
+  .laptop\:p-10 {
+    padding: 2.5rem;
+  }
   .laptop\:p-4 {
     padding: 1rem;
   }
   .laptop\:p-0 {
     padding: 0px;
-  }
-  .laptop\:p-10 {
-    padding: 2.5rem;
   }
   .laptop\:px-0 {
     padding-left: 0px;
